--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>Hola como andas</p>
+    <img src="" alt="">
+    <main></main>
+    <footer></footer>
 </body>
 </html>
